--- a/css/chat.css
+++ b/css/chat.css
@@ -2,18 +2,27 @@ html, body {
     height: 100%;
     margin: 0;
 }
+body{
+    background-color: #E7C79E;
+}
 
 /* bar */
 .chat-bar {
     width: 100%;
     height: 3.5rem;
-    background-color: #4C9C62;
+    /* background-color: #4C9C62; */
+    background-color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 0 0 2rem 2rem;
+    box-shadow: 1px 1px 5px 1px rgb(132, 132, 132);
+    position: fixed;
 }
 .chat-bar i, .chat-p {
-    color: white;
+    /* color: white; */
+    color: #4C9C62;
+    font-weight: bold;
 }
 .chat-bar i {
     font-size: 1.5rem;
@@ -23,6 +32,16 @@ html, body {
 
 /* 채팅 */
 .chat-wrapper {
-    height: 100%;
+    width: 100%;
+    height: 100rem;
     background-color: #E7C79E;
+    border-radius: 0 0 2rem 2rem;
+    margin-top: -1rem;
+}
+.chat-input {
+    width: 100%;
+    height: 15rem;
+    position: fixed;
+    bottom: 0;
+    background-color: #585C3C;
 }
