--- a/css/chat.css
+++ b/css/chat.css
@@ -3,7 +3,7 @@ html, body {
     margin: 0;
 }
 body{
-    background-color: #E7C79E;
+    background-color: #585C3C;
 }
 
 /* bar */
@@ -33,15 +33,27 @@ body{
 /* 채팅 */
 .chat-wrapper {
     width: 100%;
-    height: 100rem;
+    height: 47rem;
+    max-width: 47rem;
     background-color: #E7C79E;
     border-radius: 0 0 2rem 2rem;
     margin-top: -1rem;
 }
 .chat-input {
     width: 100%;
-    height: 15rem;
+    height: 10rem;
     position: fixed;
     bottom: 0;
     background-color: #585C3C;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.chat-input div {
+    background-color: white;
+    display: inline-block;
+    padding: 0.5rem;
+    border-radius: 5px;
+    font-size: 110%;
+    margin: 3px;
 }
