--- a/css/chat.css
+++ b/css/chat.css
@@ -62,6 +62,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
+    box-shadow: 2px 2px 2px 1px rgb(104, 104, 104);
 }
 .chat-input .chat-mission {
     width: 140px;
@@ -80,4 +82,13 @@ body{
     z-index: 1;
     right: -13px;
     top: 30px;
+}
+.chat ul,.chat li {
+    list-style: none;
+}
+/* hover */
+.chat-input div:hover {
+    transition: 0.5s;
+    transform: translateY(-10px);
+    background-color: #fff;
 }
