--- a/css/chat.css
+++ b/css/chat.css
@@ -1,15 +1,24 @@
+/* 하단탭바(주황) : #FF9966
+하단탭바(연두) : #7BAC1F
+식단,서브(그린) : #55B46F 
+채팅배경div(살구) : #EFC69A 
+채팅배경div(녹색) : #3F4435 
+기타 서브 오브젝트(연두) : #DEEBA4
+기타 서브 오브젝트(녹색) : #5B6348 */
+
 html, body {
     height: 100%;
     margin: 0;
 }
 body{
-    background-color: #585C3C;
+    background-color: #3F4435;
+    /* background-color: #585C3C; */
 }
 
 /* bar */
 .chat-bar {
     width: 100%;
-    height: 3.5rem;
+    height:5.5%;
     /* background-color: #4C9C62; */
     background-color: white;
     display: flex;
@@ -21,44 +30,49 @@ body{
 }
 .chat-bar i, .chat-p {
     /* color: white; */
-    color: #4C9C62;
+    /* color: #4C9C62; */
+    color: #55B46F;
     font-weight: bold;
+    font-size: 220%;
 }
 .chat-bar i {
-    font-size: 1.5rem;
+    font-size: 320%;
     position: absolute;
-    left: 2%;
+    left: 3%;
 }
 
 /* 채팅 */
 .chat-wrapper {
     width: 100%;
-    height: 47rem;
-    max-height: 47rem;
-    background-color: #E7C79E;
+    height: 85%;
+    /* max-height: 2200px; */
+    /* background-color: #E7C79E; */
+    background-color: #EFC69A;
     border-radius: 0 0 2rem 2rem;
     margin-top: -1rem;
 }
 .chat-input {
     width: 100%;
-    height: 10rem;
+    height: 20rem;
     position: fixed;
     bottom: 0;
-    background-color: #585C3C;
+    background-color: #3F4435;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .chat-input div {
     position: relative;
-    width: 100px;
-    height: 80px;
+    width: 200px;
+    height: 200px;
     padding: 0px;
     background: #FFFFFF;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
-    margin: 1rem;
+    margin: 1.5rem;
+    margin-top: -2rem;
+    font-size: 180%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -66,10 +80,10 @@ body{
     box-shadow: 2px 2px 2px 1px rgb(104, 104, 104);
 }
 .chat-input .chat-mission {
-    width: 140px;
+    width: 250px;
 }
 .chat-input .chat-advantage {
-    width: 170px;
+    width: 310px;
 }
 .chat-input div::after {
     content: '';
