--- a/css/chat.css
+++ b/css/chat.css
@@ -18,14 +18,15 @@ body{
 /* bar */
 .chat-bar {
     width: 100%;
-    height:6%;
+    height: 6%;
     /* background-color: #4C9C62; */
     background-color: white;
+    font-size: small;
     top: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 0 0 2rem 2rem;
+    border-radius: 0 0 1rem 1rem;
     box-shadow: 1px 1px 5px 1px rgb(132, 132, 132);
     position: fixed;
     z-index: 1;
@@ -35,12 +36,12 @@ body{
     /* color: #4C9C62; */
     color: #55B46F;
     font-weight: bold;
-    font-size: 270%;
 }
 .chat-bar i {
-    font-size: 400%;
+    font-size: 120%;
     position: absolute;
     left: 3%;
+    cursor: pointer;
 }
 
 /* 채팅 */
@@ -56,56 +57,49 @@ body{
 }
 .chat-input {
     width: 100%;
-    height: 28rem;
+    height: 9rem;
     position: fixed;
     bottom: 0;
     background-color: #3F4435;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 2rem 2rem 0 0;
+    flex-wrap: wrap;
+    align-content: center;
+    border-radius: 1rem 1rem 0 0;
 }
 .chat-input div {
     position: relative;
-    width: 200px;
-    height: 200px;
-    padding: 0px;
+    padding: 8px;
     background: #FFFFFF;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
-    margin: 1.5rem;
-    font-size: 180%;
+    margin: 0 10px 15px 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
     box-shadow: 2px 2px 2px 1px rgb(104, 104, 104);
 }
-.chat-input .chat-mission {
-    width: 250px;
-}
-.chat-input .chat-advantage {
-    width: 310px;
-}
 .chat-input div::after {
     content: '';
     position: absolute;
     border-style: solid;
-    border-width: 10px 0 10px 13px;
+    border-width: 5px 0 5px 8px;
     border-color: transparent #FFFFFF;
     display: block;
     width: 0;
     z-index: 1;
-    right: -13px;
-    top: 30px;
+    right: -8px;
+    top: 13px;
 }
 .scroll {
     height: 100%;
-    padding: 13% 5% 0 5%;
+    padding: 17% 5% 0 5%;
     margin: 0;
-    margin-bottom: 400px;
-    overflow: scroll;
+    margin-bottom: 80px;
+    overflow-y: scroll;
     /* display: flex;
     flex-direction: column; */
 }
@@ -116,26 +110,27 @@ body{
 .send {
     /* text-align: right; */
     width: 60%;
-    word-break: break-all;
+    font-size: small;
+    word-break: keep-all;
     padding: 3%;
-    font-size: 260%;
     background-color: white;
-    margin: 3rem;
-    border-radius: 1rem;
+    margin: 1rem;
+    border-radius: 0.5rem;
     position: relative;
     display: flex;
+    box-shadow: 2px 2px 2px 0.1px rgb(159, 159, 159);
 }
 .send::after{
     content: '';
     position: absolute;
     border-style: solid;
-    border-width: 15px 0 15px 15px;
+    border-width: 5px 0 5px 8px;
     border-color: transparent #FFFFFF;
     display: block;
     width: 0;
     /* z-index: 1; */
-    right: -15px;
-    top: 45px;
+    right: -8px;
+    top: 13px;
 }
 .receive-wrapper {
     display: flex;
@@ -143,29 +138,53 @@ body{
 }
 .receive {
     width: 60%;
-    word-break: break-all;
+    font-size: small;
+    word-break: keep-all;
     padding: 3%;
-    font-size: 260%;
     background-color: white;
-    margin: 3rem;
-    border-radius: 1rem;
+    margin: 1rem;
+    border-radius: 0.5rem;
     display: inline-block;
     position: relative;
+    box-shadow: 2px 2px 2px 0.1px rgb(159, 159, 159);
 }
 .receive::after{
     content: '';
     position: absolute;
     border-style: solid;
-    border-width: 15px 15px 15px 0;
+    border-width: 5px 8px 5px 0;
     border-color: transparent #FFFFFF;
     display: block;
     width: 0;
-    left: -15px;
-    top: 50px;
+    left: -8px;
+    top: 12px;
 }
 .chatkong {
-    width: 120px;
+    width: 40px;
     height: auto;
+}
+/* mission */
+.mission-wrapper {
+    width: 200px;
+    height: auto;
+    background-color: white;
+    margin-left: 10%;
+    margin-bottom: 2%;
+    padding: 5%;
+    box-shadow: 2px 2px 2px 0.5px rgb(159, 159, 159);
+}
+.mission1, .mission2, .mission3 {
+    font-size: small;
+    background-color: #B7C18D;
+    color: white;
+    border-radius: 2rem;
+    text-align: center;
+    cursor: pointer;
+}
+.mission-wrapper p {
+    padding: 5%;
+    word-break: keep-all;
+
 }
 /* hover */
 .chat-input div:hover {
