--- a/css/meal.css
+++ b/css/meal.css
@@ -7,8 +7,8 @@ body {
     align-items: center;
 }
 .meal-x {
-    font-size: 600%;
     color: #FF9966;
+    font-size: 150%;
     position: absolute;
     top: 2%;
     left: 3%;
@@ -18,7 +18,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: -10rem;
+    margin-top: -5rem;
 }
 .user-time {
     display: flex;
@@ -28,19 +28,15 @@ body {
 .meal-user {
     margin-right: 1rem;
 }
-.meal-user img {
-    width: 7rem;
-    height: auto;
-}
 #meal-time-p {
-    font-size: 300%;
+    font-size: small;
     color: rgb(99, 99, 99);
 }
 .meal-select {
-    width: 150%;
-    border-radius: 1.25rem;
-    box-shadow: 0px 0px 20px 6px rgb(188, 188, 188);
-    padding: 15% 5%;
+    width: 100%;
+    border-radius: 1rem;
+    box-shadow: 0px 0px 8px 3px rgb(188, 188, 188);
+    padding: 10% 5%;
     margin-bottom: 2.5rem;
 }
 .meal-select-top,
@@ -49,13 +45,13 @@ body {
     justify-content: center;
 }
 .meal-select i {
-    font-size: 1300%;
+    font-size: 350%;
     color: #57AA6C;
-    padding: 0.5rem;
+    padding: 0.1rem;
 }
 .meal-select-ok {
-    width: 150%;
-    height: 6rem;
+    width: 90%;
+    height: 1.5rem;
     background-color: #77A644;
     padding: 0.2rem 1.5rem;
     border-radius: 5px;
@@ -64,6 +60,6 @@ body {
     justify-content: center;
 }
 .meal-select-ok i {
-    font-size: 600%;
+    font-size: 200%;
     color: white;
 }
