--- a/css/meal.css
+++ b/css/meal.css
@@ -1,5 +1,6 @@
 html, body {
     height: 100%;
+    margin: 0;
 }
 body {
     display: flex;
@@ -26,14 +27,14 @@ body {
     margin-bottom: 1.5rem;
 }
 .meal-user {
-    margin-right: 1rem;
+    margin-right: 0.5rem;
 }
 #meal-time-p {
     font-size: small;
     color: rgb(99, 99, 99);
 }
 .meal-select {
-    width: 100%;
+    width: 75%;
     border-radius: 1rem;
     box-shadow: 0px 0px 8px 3px rgb(188, 188, 188);
     padding: 10% 5%;
@@ -44,13 +45,16 @@ body {
     display: flex;
     justify-content: center;
 }
-.meal-select i {
-    font-size: 350%;
-    color: #57AA6C;
-    padding: 0.1rem;
+.meal-select div {
+    display: flex;
+    justify-content: center;
+}
+.meal-select img {
+    width: 80%;
+    height: auto;
 }
 .meal-select-ok {
-    width: 90%;
+    width: 70%;
     height: 1.5rem;
     background-color: #77A644;
     padding: 0.2rem 1.5rem;
