--- a/css/meal.css
+++ b/css/meal.css
@@ -7,6 +7,9 @@ body {
     justify-content: center;
     align-items: center;
 }
+a {
+    text-decoration: none;
+}
 .meal-x {
     color: #FF9966;
     font-size: 150%;
@@ -53,6 +56,16 @@ body {
     width: 80%;
     height: auto;
 }
+.meal-select img:hover {
+    transition: 0.5s;
+    transform: translateY(-10px);
+    background-color: #fff;
+}
+.select-a {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
 .meal-select-ok {
     width: 70%;
     height: 1.5rem;
@@ -62,6 +75,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 .meal-select-ok i {
     font-size: 200%;
