--- a/css/meal.css
+++ b/css/meal.css
@@ -61,6 +61,14 @@ a {
     transform: translateY(-10px);
     background-color: #fff;
 }
+.mschk {
+    font-size: 350%;
+    font-weight: 900;
+    color: #FF9966;
+    position: absolute;
+    text-align: center;
+    margin-top: 2%;
+}
 .select-a {
     display: flex;
     justify-content: center;
